# mega_manager

./: .env.example  .gitignore  README.md  pyproject.toml  repos.txt
mega_manager/: __init__.py  auth.py  gitlab_api.py  main.py  models.py  reader.py  storage.py
output/: events_20260415_214818.csv  events_20260415_215223.csv  events_20260415_220218.csv  events_20260415_220226.csv  issues_20260415_214818.csv  issues_20260415_215223.csv  issues_20260415_220226.csv  mega_manager.db  members_20260415_215223.csv  projects_20260415_214818.csv  projects_20260415_215223.csv  projects_20260415_220218.csv  projects_20260415_220226.csv
